<resources>
    <string name="app_name" translatable="false">SmartMouse</string>
    <string name="drawer_home">Home</string>
    <string name="drawer_connect">Connect</string>
    <string name="drawer_mouse">Mouse</string>
    <string name="drawer_settings">Settings</string>
    <string name="drawer_about">About</string>
    <string name="title_connect">Connect</string>
    <string name="title_home">Home</string>
    <string name="home_status_init">Initializing</string>
    <string name="home_button_init">Initializing</string>
    <string name="home_status_unsupported">Unsupported</string>
    <string name="home_button_unsupported">Return</string>
    <string name="home_unsupported_message">Your device does not seem to support the bluetooth HID profile that is required to run this app. <br /> Not all devices do support this profile. Sometimes, support for this profile may be added in a firmware update.</string>
    <string name="home_unsupported_playstore">Open in Play Store</string>
    <string name="home_status_disconnected">Disconnected</string>
    <string name="home_button_disconnected">Connect</string>
    <string name="home_connected_message">Connected to:</string>
    <string name="home_status_connected">Connected</string>
    <string name="home_button_connected">To Mouse</string>
    <string name="home_connected_elapsed">%s elapsed</string>
    <string name="home_disabled_message">Connections to the target device are established via bluetooth. Please enable bluetooth to use this app.</string>
    <string name="home_disabled_recheck">Refresh</string>
    <string name="home_status_disabled">Disabled</string>
    <string name="home_button_disabled">Enable Bluetooth</string>
    <string name="connect_status_disconnected">Disconnected</string>
    <string name="connect_select_prompt">Select a device:</string>
    <string name="connect_select_add">Add a device</string>
    <string name="dialog_add_next">Next</string>
    <string name="dialog_add_cancel">Cancel</string>
    <string name="dialog_add_select_manual">Add Manually</string>
    <string name="dialog_add_select_unknown">Unknown</string>
    <string name="dialog_add_select_title">Select a device:</string>
    <string name="dialog_add_select_scanning">Scanning…</string>
    <string name="dialog_add_select_rescan">Rescan</string>
    <string name="dialog_add_select_initializing">Initializing</string>
    <string name="dialog_add_select_notice">Make sure your target device is discoverable in order to see it here. In some cases this must be enabled explicitly.</string>
    <string name="dialog_add_manual_name">Device Name</string>
    <string name="dialog_add_manual_mac">Device MAC Address</string>
    <string name="dialog_add_manual_name_error">Please enter a Name</string>
    <string name="dialog_add_manual_mac_error">Please enter a valid MAC address</string>
    <string name="dialog_add_bonded_future">Your device is currently already paired to the target device. On some devices, this might lead to connection issues in the future.</string>
    <string name="dialog_add_bonded_instruction">So if you experience connection issues with this target device, try to remove the target device from this device AND this device from the target device in the respective bluetooth settings.</string>
    <string name="dialog_add_bonded_error">Your device is still paired to the target device.</string>
    <string name="dialog_add_success_message">Successfully added device:</string>
    <string name="dialog_add_success_title">Success</string>
    <string name="dialog_add_success_positive">Done</string>
    <string name="dialog_add_already_message">You have already added this device.</string>
    <string name="dialog_add_already_helper">If you do not see your device under the added devices, it may be stored under an old name.</string>
    <string name="dialog_add_already_positive">Done</string>
    <string name="dialog_add_already_title">Already Added</string>
    <string name="connect_select_item_unknown">Unknown</string>
    <string name="connect_select_item_last">Last used: %s</string>
    <string name="dialog_info_name">Name</string>
    <string name="dialog_info_address">MAC Address</string>
    <string name="dialog_info_last">Last used at</string>
    <string name="dialog_info_positive">Done</string>
    <string name="dialog_info_delete">Remove device</string>
    <string name="dialog_info_title">Device Information</string>
    <string name="connect_select_item_last_format">dd/MM/yy</string>
    <string name="connect_select_item_never">Never</string>
    <string name="dialog_info_last_never">Not yet</string>
    <string name="dialog_info_last_format">dd/MM/yy</string>
    <string name="connect_connecting_status_establishing">Establishing connection…</string>
    <string name="connect_connected_mouse">To Mouse</string>
    <string name="connect_connected_disconnect">Disconnect</string>
    <string name="connect_connected_name">Connected to:</string>
    <string name="connect_connected_elapsed">%s elapsed</string>
    <string name="connect_status_connecting">Connecting…</string>
    <string name="home_connected_more">More info</string>
    <string name="connect_failed_message">Failed to connect to:</string>
    <string name="connect_failed_precautions">Make sure that …</string>
    <string name="connect_failed_precautions_range">… the target device is in range.</string>
    <string name="connect_failed_precautions_bluetooth">… bluetooth is enabled on the target device.</string>
    <string name="connect_failed_precautions_support">… the target device supports HID devices and connections with the Android Bluetooth HID Profile.</string>
    <string name="connect_failed_fixes">Possible fixes to other problems may be to …</string>
    <string name="connect_failed_fixes_repair">… remove this device from your target device and the host from this device in the respective bluetooth settings.</string>
    <string name="connect_failed_fixes_trust">… trust this device on the target device so that this device can connect to it on its own.</string>
    <string name="connect_failed_back">Back</string>
    <string name="connect_failed_remove">Remove this device</string>
    <string name="title_settings">Settings</string>
    <string name="dialog_calibrate_happening_message">Please wait while the app is analyzing your sensors and calibrating its values. This process can take up to one minute.</string>
    <string name="dialog_calibrate_title">Calibrating Algorithm</string>
    <string name="dialog_calibrate_next">Next</string>
    <string name="dialog_calibrate_done">Done</string>
    <string name="dialog_calibrate_happening_init">Initializing…</string>
    <string name="dialog_calibrate_happening_sampling">Analyzing sampling rate…</string>
    <string name="dialog_calibrate_happening_noise">Analyzing noise levels…</string>
    <string name="dialog_calibrate_finished_message">Successfully completed the calibration procedure. You can proceed to use the App now.</string>
    <string name="dialog_calibrate_finished_title">Calibration finished</string>
    <string name="settings_reset_dialog_message">Do you want to reset your changed settings?</string>
    <string name="settings_reset_dialog_reset">Reset</string>
    <string name="settings_reset_dialog_cancel">Cancel</string>
    <string name="settings_communication_removeall_confirmation">All your saved devices have been removed successfully.</string>
    <string name="settings_communication_removeall_dialog_message">Do you want to remove all your previously added target devices from this app?</string>
    <string name="settings_communication_removeall_dialog_remove">Remove</string>
    <string name="settings_communication_removeall_dialog_cancel">Cancel</string>
    <string name="settings_reset_confirmation">Your settings have been reset successfully.</string>
    <string name="dialog_mouse_next">Next</string>
    <string name="mouse_message_calibrate">In order for this app to work properly as a mouse, its configuration first has to be acustomed to your device. You can use the app after the calibration process.</string>
    <string name="dialog_mouse_calibrate_cancel">Cancel</string>
    <string name="dialog_mouse_calibrate_done">Done</string>
    <string name="dialog_mouse_calibrate_title_calibrate">Analyzing sampling rate</string>
    <string name="dialog_mouse_calibrate_title_intro">Finish setup</string>
    <string name="dialog_mouse_calibrate_title_finished">Setup finished</string>
    <string name="dialog_mouse_calibrate_finished">The calibration has completed successfully. You may now use the mouse.</string>
    <string name="dialog_mouse_usage_even">In order for the mouse movement to function ideally, make sure to place your smartphone on a large, even and flat surface.</string>
    <string name="dialog_mouse_usage_move">To move the mouse cursor, move the smartphone as if it was a normal computer mouse.</string>
    <string name="dialog_mouse_usage_buttons">Use the buttons on screen to perform clicks. Swipe on the middle button to scroll, hold to make a middle click.</string>
    <string name="dialog_mouse_usage_return">In order to leave the mouse interface, swipe in from the left to reveal the navigation drawer.</string>
    <string name="dialog_mouse_usage_next">Next</string>
    <string name="dialog_mouse_usage_title">Usage</string>
    <string name="dialog_mouse_usage_notagain">Do not show these instructions again.</string>
    <string name="dialog_mouse_usage_finished">You may now use the mouse.</string>
    <string name="dialog_add_request_permission_message">In order to see nearby bluetooth devices, an app is required to have location permissions. If you want to see and add your nearby devices, please go on and grant the location permissons. If you do not want to give location permissoins to this app, you can still add your device manually.</string>
    <string name="dialog_add_request_permission_error">You need to grant the app location permissions to continue.</string>
    <string name="dialog_add_request_permission_title">Grant Location</string>
    <string name="dialog_add_request_setting_error">You need to enable location to continue.</string>
    <string name="dialog_add_request_setting_message">In order to see nearby devices, you must have location turn on. If you don\'t want to enable location, you can still add a device manually.</string>
    <string name="dialog_add_request_setting_title">Enable Location</string>
    <string name="title_about">About</string>
    <string name="app_version" translatable="false">1.4.0</string>
    <string name="about_title_version">Version:&#160;</string>
    <string name="about_title_date">Last updated at:&#160;</string>
    <string name="app_date" translatable="false">31.03.23</string>
    <string name="about_explanation">This app tries to make your smartphone usable as a normal computer mouse. It estimates its the position of the Smartphone by processing accelerometer and gyroscope data in its custom sensor-fusion algorithm. However, this estimation is not always correct, which leads to different artifacts and wrong movements of the cursor. Because of that, this app is far from finished and should not be treated as a finished product.</string>
    <string name="about_github">This app is open source and may be found on <a href="https://github.com/VirtCode/SmartMouse">GitHub</a>.</string>
    <string name="connect_connecting_disclaimer">If this process is taking too long, you may restart the app and select another device.</string>
    <string name="settings_communications_transmission_title">Bluetooth Transmission Rate</string>
    <string name="settings_communication_transmission_description">How frequently is data transmitted (Hz)</string>
    <string name="drawer_touchpad">Touchpad</string>
    <string name="drawer_slides_controller">Slides Controller</string>
</resources>